fixed layout issues in mobile css

--- a/mobile.css
+++ b/mobile.css
@@ -156,9 +156,6 @@ footer div {
 }
 /************media queries for extra small screen*****/
 @media only screen and (min-width: 250px) and (max-width: 366px){
-        body {
-            color: blue;
-        }
         .search_wrapper form {
             grid-template-columns: 40px 50% 40px; 
         }
@@ -168,13 +165,21 @@ footer div {
             align-items: flex-start;
         }
         .popular_wrapper {
-            grid-template-rows: 70px repeat(3, 180px) 32px; 
+            grid-template-columns: 90%;
+            padding-left: 1rem;
+            justify-items: unset;
+            grid-template-rows: 70px repeat(3, 230px) 32px; 
         }
         .popular_wrapper div {
-            width: 60%;
-            min-width:unset;
-                
+            width: 90%;
+            min-width:unset;      
         }
+        .popular_wrapper p {
+            margin-bottom: 0rem;
+        }
+        .stars, .star_grey {
+            margin-left: 2.5rem;
+          }
         .popular_wrapper img { 
             width:  100%;
             height: 60%;
